# IONIQ-GPS-PARSER

./: README.md
gps/: CMakeLists.txt  README.md  package.xml
gps/launch/: sensor.launch
gps/src/: GPS.py  GPS_preprocessing.py  TM_result-58.csv
gps/src/BACKUP/: backup.py  parsing_GPS.py  parsing_GPS_og.py  plotting.py
mi_msgs/: CMakeLists.txt
mi_msgs/msg/: Car.msg  Car_state.msg  Control.msg  GPS.msg  Remote.msg  Sonar.msg  Trigger.msg  imu_mi.msg  one.msg
