cmake_minimum_required(VERSION 2.8.3)
project(mi_msgs)
set(CMAKE_CXX_STANDARD 14)
find_package(catkin REQUIRED
  COMPONENTS
    message_generation
    std_msgs
)

add_message_files(DIRECTORY msg
  FILES
    Car.msg
	Car_state.msg
	Control.msg
	GPS.msg
	imu_mi.msg
	Remote.msg
	Sonar.msg
	Car_LGIT.msg
	SCH_LGIT.msg
	Trigger.msg
    one.msg
)

generate_messages(
  DEPENDENCIES
    std_msgs
)

catkin_package(
  CATKIN_DEPENDS
    message_runtime
    std_msgs
)
